--- a/src/config/tinfoil_config.yml
+++ b/src/config/tinfoil_config.yml
@@ -1,14 +1,9 @@
+
+routers:
+  inference.tinfoil.sh:
+  router.inf5.tinfoil.sh:
+
 models:
-  inference:
-    repo: tinfoilsh/confidential-pollux-inference
-    enclaves:
-      - pollux-inference-replica.inf6.tinfoil.sh
-
-  training:
-    repo: tinfoilsh/confidential-pollux-training
-    enclaves:
-      - pollux-training-replica.inf6.tinfoil.sh
-
   nomic-embed-text:
     repo: tinfoilsh/confidential-nomic-embed-text
     enclaves:
@@ -25,14 +20,14 @@ models:
       - whisper.inf6.tinfoil.sh
 
   llama3-3-70b:
-    repo: tinfoilsh/confidential-llama-qwen
+    repo: tinfoilsh/confidential-llama3-3-70b
     enclaves:
-      - llama-qwen.inf8.tinfoil.sh
+      - llama3-3-70b.inf5.tinfoil.sh
 
   qwen3-coder-480b:
-    repo: tinfoilsh/confidential-llama-qwen
+    repo: tinfoilsh/confidential-qwen3-coder-480b
     enclaves:
-      - llama-qwen.inf8.tinfoil.sh
+      - qwen3-coder-480b.inf8.tinfoil.sh
 
   deepseek-r1-0528:
     repo: tinfoilsh/confidential-deepseek-r1-0528
@@ -58,6 +53,11 @@ models:
     repo: tinfoilsh/confidential-titan-qwen2-5-05b
     enclaves:
       - titan-qwen2-5-05b.inf5.tinfoil.sh
+
+  kimi-k2-thinking:
+    repo: tinfoilsh/confidential-kimi-k2-thinking
+    enclaves:
+      - kimi-k2-thinking.inf10.tinfoil.sh
 
   deepseek-v31-terminus:
     repo: tinfoilsh/confidential-deepseek-v31-terminus
