--- a/config/tinfoil_config.yml
+++ b/config/tinfoil_config.yml
@@ -1,7 +1,5 @@
-
 routers:
   inference.tinfoil.sh:
-  router.inf5.tinfoil.sh:
 
 models:
   nomic-embed-text:
@@ -27,7 +25,7 @@ models:
   qwen3-coder-480b:
     repo: tinfoilsh/confidential-qwen3-coder-480b
     enclaves:
-      - qwen3-coder-480b.inf8.tinfoil.sh
+      - qwen3-coder-480b.inf7.tinfoil.sh
 
   deepseek-r1-0528:
     repo: tinfoilsh/confidential-deepseek-r1-0528
@@ -48,7 +46,7 @@ models:
     repo: tinfoilsh/confidential-qwen3-vl-30b
     enclaves:
       - qwen3-vl-30b.inf5.tinfoil.sh
-  
+
   titan-qwen2-5-05b:
     repo: tinfoilsh/confidential-titan-qwen2-5-05b
     enclaves:
@@ -59,10 +57,7 @@ models:
     enclaves:
       - kimi-k2-thinking.inf10.tinfoil.sh
 
-  deepseek-v31-terminus:
-    repo: tinfoilsh/confidential-deepseek-v31-terminus
+  qwen2-5-05b:
+    repo: tinfoilsh/confidential-qwen2-5-05b
     enclaves:
-      - deepseek-v31-terminus.inf7.tinfoil.sh
-    overload:
-      max_requests_waiting: 75
-      retry_after_minutes: 3
+      - qwen2-5-05b.inf5.tinfoil.sh
