--- a/config/tinfoil_config.yml
+++ b/config/tinfoil_config.yml
@@ -42,6 +42,11 @@ models:
     enclaves:
       - gpt-oss-120b-free.inf5.tinfoil.sh
 
+  gpt-oss-safeguard-120b:
+    repo: tinfoilsh/confidential-gpt-oss-safeguard-120b
+    enclaves:
+      - gpt-oss-safeguard-120b.inf5.tinfoil.sh
+
   qwen3-vl-30b:
     repo: tinfoilsh/confidential-qwen3-vl-30b
     enclaves:
@@ -55,7 +60,7 @@ models:
   kimi-k2-thinking:
     repo: tinfoilsh/confidential-kimi-k2-thinking
     enclaves:
-      - kimi-k2-thinking.inf10.tinfoil.sh
+      - kimi-k2-thinking.inf8.tinfoil.sh
 
   qwen2-5-05b:
     repo: tinfoilsh/confidential-qwen2-5-05b
