--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
     "uvicorn>=0.40.0",
+    "python-dotenv>=1.0.1",
+    "PyJWT>=2.10.1",
 ]
 
 [dependency-groups]
